--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,37 @@
 /* Header */
+
 .header {
     border: 1px dotted blue;
 }
 
 .container {
     border: 1px dotted red;
-    display: flex
-;
+    max-width: 96vw;
+    margin: 0 auto;
+}
+
+@media ( min-width: 568px) {
+    .container {
+        max-width: 540px;
+    }
+}
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 1024px){
+    .container{
+        max-width: 992px;
+    }
+}
+
+.header-container {
+    display: flex;
     justify-content: space-between;
 }
+
+
 /* Main */
 /* Footer */
