--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,25 @@
 /* Header */
 
 .header {
-    border: 1px dotted blue;
+    border: 1px dotted red;
 }
 
 .container {
-    border: 1px dotted red;
-    max-width: 96vw;
+    border: 1px dotted blue;
+    max-width: 96vw;         /**Ancho Máximo*/
+    margin: 0 auto;          /**Centra el elemento*/
+    padding: 0 8px;          /**Hace que los bordes queden internos*/
+    box-sizing: border-box;    
+}
+
+.container-fluid{
+    border: 1px solid orangered;
     margin: 0 auto;
+    max-width: 100vw;
+    box-sizing: border-box;
+    padding: 0;
 }
 
-@media ( min-width: 568px) {
-    .container {
-        max-width: 540px;
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
-}
-
-@media (min-width: 1024px){
-    .container{
-        max-width: 992px;
-    }
-}
 
 .header-container {
     display: flex;
@@ -35,3 +29,53 @@
 
 /* Main */
 /* Footer */
+
+/* Media Queries */
+
+@media ( min-width: 568px) {
+    .container {
+        max-width: 540px;
+        padding: 0 16px;   /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
+    }
+}
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+        padding: 0 24px;
+    }
+}
+
+@media (min-width: 1024px){
+    .container{
+        max-width: 992px;
+        padding: 0 32px;
+    }
+}
+
+@media ( min-width:1200px ){
+    .container{
+        max-width: 1140px;
+        padding:0 40px;
+    }
+}
+
+@media ( min-width:1400px ){
+    .container{
+        max-width: 1320px;
+        padding: 0 48px;
+    }
+}
+
+@media ( min-width:1600px ){
+    .container{
+        max-width: 1440px;
+        padding: 0 56px;
+    }
+}
+
+@media ( min-width:1920px ){
+    .container{
+        max-width: 1600px;
+        padding-left: 0 64px;
+    }
+}
