Agregamos titulos a las secciones y el logo en el footer

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 /* Main */
 /* Footer */
 
-/* Media Queries */
+/* Media Queries (Siempre tienen que ir de último)*/
 
 @media ( min-width: 568px) {
     .container {
