main.css Posicionar el footer siempre en la parte inferior de la ventana del navegador

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,15 @@
-/* Header */
+html, 
+body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+./* Header */
 
 .header {
     border: 1px dotted red;
@@ -28,6 +39,9 @@
 
 
 /* Main */
+main {
+    flex-grow: 1;
+}
 /* Footer */
 
 /* Media Queries (Siempre tienen que ir de último)*/
