--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,14 @@ body {
 }
 
 
-.header-container {
+.menu-main {
+    display: none;
+}
+
+.nav-navbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -51,6 +56,16 @@ main {
         max-width: 540px;
         padding: 0 16px;   /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
     }
+    .menu-main {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 1rem;   /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
+    }
+    .hamburger-menu {
+    display: none;
+}
 }
 @media (min-width: 768px) {
     .container {
