--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,10 @@ body {
     flex-direction: column;
 }
 
+h1 span {
+    color: #04B90B;
+}
+
 ./* Header */
 
 .header {
@@ -17,17 +21,17 @@ body {
 
 .container {
     border: 1px dotted blue;
-    max-width: 96vw;         /**Ancho Máximo*/
-    margin: 0 auto;          /**Centra el elemento*/
-    padding: 0 8px;          /**Hace que los bordes queden internos*/
     box-sizing: border-box;    
+    margin: 0 auto;          /**Centra el elemento*/
+    max-width: 96vw;         /**Ancho Máximo*/
+    padding: 0 8px;          /**Hace que los bordes queden internos*/
 }
 
 .container-fluid{
     border: 1px solid orangered;
+    box-sizing: border-box;
     margin: 0 auto;
     max-width: 100vw;
-    box-sizing: border-box;
     padding: 0;
 }
 
@@ -37,11 +41,28 @@ body {
 }
 
 .nav-navbar {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    display: flex;
+    height: 44px;
+    justify-content: space-between;
 }
 
+.menu__link {
+    color: #777E90;
+    text-decoration: none;
+}
+
+.btn {
+    padding: .5rem;
+    border-radius: .3rem;
+}
+
+.btn--light-green {
+    background-color: #04B90B;
+    color: #FFFFFF;
+    text-transform: uppercase;
+
+}
 
 /* Main */
 main {
@@ -57,11 +78,11 @@ main {
         padding: 0 16px;   /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
     }
     .menu-main {
-    list-style: none;
-    padding: 0;
-    margin: 0;
     display: flex;
-    gap: 1rem;   /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
+    gap: .5rem;   /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
+    list-style: none;
+    margin: 0;
+    padding: 0;
     }
     .hamburger-menu {
     display: none;
