--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,26 @@
     --over-font-size: 62.5%; /** Este porcentaje hace que el " em / rem " sea de base 10px */
 
     /* Colores Base */
-    --Charleston-Green: #23262F; /** Color de letra h1 Pag.1*/
-    --Chinese-White: #DDF3D8; /** Color del circulo de fondo en la imagen Pag.1 */
-    --Cultured: #F4F5F6; /** Color del recuadro "years of service" Pag.1 */
-    --Islamic-Green: #04B90B; /** Color principal "botón Order Now" Pag.1 */
-    --Lotion: #FCFCFD; /** Color blanco del fondo de la pagina web Pag.1*/
-    --Slate-Gray: #777E90; /** Color de los btn en el Header & h2 Pag.1 */
-    --White: #FFFFFF; /** Color de fondo en las imagenes de comida Pag.2 & la descripción de la Pag.3 */
+    --chinese-black:#141416;
+    --slate-grey: #777e90;
+    --cadet-blue:#b1b5c3;
+    --bright-gray:#e6e8ec;
+    --cultured:#f5f6fa;
+    --lotion: #fcfcfd;
+    --islamic-green:-#04b90b;
+    --aero-blue:#d3f9d5;
+    --light-coral:#ea8484;
+    --lavender-blush:#fcf1f1;
+    --green-blue:#106aab;
+    --alice-blue:#f1f7fc;
+    --dark-pink:#f25178;
+    --misty-rose:#fce5e9;
+    --blue-violet:#8d31e9;
+    --magnolia:#f6eefd;
+    --gamboge:#da9f0a;
+    --cornsilk:#fcf6d8;
+    --light-sea-green:#26aca0;
+    --azure:#edfcfb;
 } 
 
 html {
@@ -90,7 +103,7 @@ main {
 
 /* Media Queries(Break-Point) (Siempre tienen que ir de último)*/
 
-@media ( min-width: 568px) {
+@media ( width > 568px) {      /** Ahora se cambia la escritura de " min-width: #px " a " width > #px " para Mobile First*/ /** Y para Desktop First se escribe " width < #px */
     .container {
         max-width: 54rem;
         padding: 0 1.6rem;   /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
@@ -106,42 +119,42 @@ main {
     display: none;
 }
 }
-@media (min-width: 768px) {
+@media ( width > 768px) {
     .container {
         max-width: 72rem;
         padding: 0 2.4rem;
     }
 }
 
-@media (min-width: 1024px){
+@media ( width > 1024px){
     .container{
         max-width: 99.2rem;
         padding: 0 3.2rem;
     }
 }
 
-@media ( min-width:1200px ){
+@media ( width > 1200px ){
     .container{
         max-width: 114rem;
         padding:0 4rem;
     }
 }
 
-@media ( min-width:1400px ){
+@media ( width > 1400px ){
     .container{
         max-width: 132rem;
         padding: 0 4.8rem;
     }
 }
 
-@media ( min-width:1600px ){
+@media ( width > 1600px ){
     .container{
         max-width: 144rem;
         padding: 0 5.6rem;
     }
 }
 
-@media ( min-width:1920px ){
+@media ( width > 1920px ){
     .container{
         max-width: 160rem;
         padding-left: 0 6.4rem;
