--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,11 @@ main {
 }
 
 /* Footer */
+.menu-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
 .widget {
     margin: 4rem 0;
 }
@@ -136,6 +141,7 @@ details {
     border: 1px solid #aaaaaa;
     border-radius: 4px;
     padding: 0.5em 0.5em 0;
+    flex: 1;
 }
 
 summary {
