--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /* Variables globales  (funciona para gestionar de una manera más fácil y organizada ciertas propiedades en el código Ej: Color, tamaño de letras, etc,etc */
+@import url('https://fonts.googleapis.com/css2?family=Alice&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 /** Tipografía (fuente) usada para la página Web, siempre se debe poner en la parte superior del código (por encima del root) por si se deben poner más. */
 
@@ -45,22 +46,37 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 1.6rem;
-    font-family: "Alice", serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-h1 span {
-    color: var(--Islamic-Green);
-    /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
+h1 {
+    line-height: 1.6;
 }
 
 h1,
 h2 {
-    color: var(--Charleston-Green);
     font-size: 3.2rem;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Alice", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var(--Charleston-Green);
+}
 
-.
+h2 span {
+    color: var(--Islamic-Green);
+    /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
+}
+
 /* Header */
 
 .header {
@@ -83,6 +99,10 @@ h2 {
     box-sizing: border-box;
     margin: 0 auto;
     max-width: 100vw;
+    padding: 0;
+}
+
+.container.questions-container {
     padding: 0;
 }
 
@@ -114,13 +134,39 @@ h2 {
 .btn--light-green {
     background-color: var(--Islamic-Green);
     color: #FFFFFF;
+    text-decoration: none;
     text-transform: uppercase;
+    display: block;
+    width: 10rem;
+    margin: 0 auto;
 }
 
+
 /* Main */
-main {
+.main {
     flex-grow: 1;
 }
+
+/** Main questions*/
+.question-1 {
+    text-align: center;
+    padding: 0 5rem;
+}
+
+.question-1 p {
+    color: var(--Slate-Grey);
+    line-height: 1.6;
+    padding-bottom: 1rem;
+}
+
+.question-2 {
+    padding-top: 2rem;
+}
+
+.question-2 .img-ramen {
+    width: 100%;
+}
+
 
 /* Footer */
 .menu-footer {
@@ -175,6 +221,7 @@ details[open] summary {
     }
 
     .menu-main {
+        align-items: center;
         display: flex;
         gap: .5rem;
         /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
@@ -186,9 +233,27 @@ details[open] summary {
     .hamburger-menu {
         display: none;
     }
+
+    .question-1 {
+        text-align: unset;
+        padding: unset;
+    }
+
+    .questions-content {
+        display: flex;
+        align-items: end;
+    }
+
+    .container-image {
+        box-sizing: border-box;
+        margin: 0 auto;
+        max-width: 100vw;
+        padding: 0;
+    }
 }
 
 @media (width > 768px) {
+
     .container {
         max-width: 72rem;
         padding: 0 2.4rem;
@@ -212,6 +277,14 @@ details[open] summary {
 }
 
 @media (width > 1024px) {
+    h1 {
+        font-size: 5.6rem;
+    }
+
+    h2 {
+        font-size: 4.8rem;
+    }
+
     .container {
         max-width: 99.2rem;
         padding: 0 3.2rem;
@@ -226,6 +299,11 @@ details[open] summary {
 }
 
 @media (width > 1400px) {
+
+    h1 {
+        font-size: 7.2rem;
+    }
+
     .container {
         max-width: 132rem;
         padding: 0 4.8rem;
