--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,7 @@ h6 {
 }
 
 h2 span {
-    color: var(--Islamic-Green);
-    /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
+    color: var(--Islamic-Green);  /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
 }
 
 /* Header */
@@ -86,12 +85,9 @@ h2 span {
 .container {
     border: 1px dotted blue;
     box-sizing: border-box;
-    margin: 0 auto;
-    /**Centra el elemento*/
-    max-width: 96vw;
-    /**Ancho Máximo*/
-    padding: 0 .8rem;
-    /**Hace que los bordes queden internos*/
+    margin: 0 auto; /**Centra el elemento*/
+    max-width: 96vw; /**Ancho Máximo*/
+    padding: 0 .8rem; /**Hace que los bordes queden internos*/
 }
 
 .container-fluid {
@@ -126,9 +122,13 @@ h2 span {
     color: var(--Islamic-Green)
 }
 
+.box-buttons .btn--light-green{
+    margin: 0 auto;
+}
 .btn {
-    padding: 1rem;
-    border-radius: .3rem;
+    padding: .7rem 1.4rem;
+    border-radius: 1.1rem;
+    display: block;
 }
 
 .btn--light-green {
@@ -136,9 +136,20 @@ h2 span {
     color: #FFFFFF;
     text-decoration: none;
     text-transform: uppercase;
-    display: block;
     width: 10rem;
     margin: 0 auto;
+}
+
+.btn-non-block{
+    display: unset;
+}
+
+.btn-non-block.btn-explore {
+    display: none;
+}
+.btn-explore {
+    color: var(--Islamic-Green);
+    text-decoration: none;
 }
 
 
@@ -210,46 +221,12 @@ details[open] summary {
 
 /* Media Queries(Break-Point) (Siempre tienen que ir de último)*/
 
-@media (width > 568px) {
-
-    /** Ahora se cambia la escritura de " min-width: #px " a " width > #px " para Mobile First*/
-    /** Y para Desktop First se escribe " width < #px */
+@media (width > 567px) {   /** Ahora se cambia la escritura de " min-width: #px " a " width > #px " para Mobile First*/  /** Y para Desktop First se escribe " width < #px */
     .container {
         max-width: 54rem;
-        padding: 0 1.6rem;
-        /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
+        padding: 0 1.6rem;  /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
     }
 
-    .menu-main {
-        align-items: center;
-        display: flex;
-        gap: .5rem;
-        /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    .hamburger-menu {
-        display: none;
-    }
-
-    .question-1 {
-        text-align: unset;
-        padding: unset;
-    }
-
-    .questions-content {
-        display: flex;
-        align-items: end;
-    }
-
-    .container-image {
-        box-sizing: border-box;
-        margin: 0 auto;
-        max-width: 100vw;
-        padding: 0;
-    }
 }
 
 @media (width > 768px) {
@@ -257,6 +234,51 @@ details[open] summary {
     .container {
         max-width: 72rem;
         padding: 0 2.4rem;
+    }
+
+    .menu-main {
+        align-items: center;
+        display: flex;
+        gap: .5rem; /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .hamburger-menu {
+        display: none;
+    }
+
+    .questions-content {
+        display: flex;
+        align-items: end;
+    }
+
+    .question-1 {
+        text-align: unset;
+        padding: unset;
+    }
+
+    .box-buttons {
+    display: flex;
+    gap: 1rem;
+    }
+
+    .box-buttons .btn--light-green { 
+        margin: unset;
+    }
+    
+
+    .btn-non-block.btn-explore {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .container-image {
+        box-sizing: border-box;
+        margin: 0 auto;
+        max-width: 100vw;
+        padding: 0;
     }
 
     .footer-container {
@@ -271,8 +293,7 @@ details[open] summary {
     .widget-right {
         /* flex-basis: auto; */
         /* flex-grow: 1; */
-        flex: 1 0 auto;
-        /**Esta es la manera abrebiada de hecer el flex en una linea de código  "<grow> <shrink> <auto basis>" */
+        flex: 1 0 auto;   /**Esta es la manera abrebiada de hecer el flex en una linea de código  "<grow> <shrink> <auto basis>" */
     }
 }
 
