--- a/css/main.css
+++ b/css/main.css
@@ -60,9 +60,7 @@ h2 {
     font-size: 3.2rem;
 }
 
-h2{
-
-}
+h2 {}
 
 
 h1,
@@ -78,7 +76,8 @@ h6 {
 }
 
 h2 span {
-    color: var(--Islamic-Green);  /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
+    color: var(--Islamic-Green);
+    /** "var" refiere a las variables globales para identificar los colores tratando de que sean estandarizados*/
 }
 
 /* Header */
@@ -90,9 +89,12 @@ h2 span {
 .container {
     border: 1px dotted blue;
     box-sizing: border-box;
-    margin: 0 auto; /**Centra el elemento*/
-    max-width: 96vw; /**Ancho Máximo*/
-    padding: 0 .8rem; /**Hace que los bordes queden internos*/
+    margin: 0 auto;
+    /**Centra el elemento*/
+    max-width: 96vw;
+    /**Ancho Máximo*/
+    padding: 0 .8rem;
+    /**Hace que los bordes queden internos*/
 }
 
 .container-fluid {
@@ -127,9 +129,10 @@ h2 span {
     color: var(--Islamic-Green)
 }
 
-.box-buttons .btn--light-green{
+.box-buttons .btn--light-green {
     margin: 0 auto;
 }
+
 .btn {
     padding: .7rem 1.4rem;
     border-radius: 1.1rem;
@@ -145,13 +148,14 @@ h2 span {
     margin: 0 auto;
 }
 
-.btn-non-block{
+.btn-non-block {
     display: unset;
 }
 
 .btn-non-block.btn-explore {
     display: none;
 }
+
 .btn-explore {
     color: var(--Islamic-Green);
     text-decoration: none;
@@ -239,23 +243,35 @@ details[open] summary {
 
 /* Media Queries(Break-Point) (Siempre tienen que ir de último)*/
 
-@media (width > 567px) {   /** Ahora se cambia la escritura de " min-width: #px " a " width > #px " para Mobile First*/  /** Y para Desktop First se escribe " width < #px */
+@media (width > 567px) {
+
+    /** Ahora se cambia la escritura de " min-width: #px " a " width > #px " para Mobile First*/
+    /** Y para Desktop First se escribe " width < #px */
     .container {
         max-width: 54rem;
-        padding: 0 1.6rem;  /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
+        padding: 0 1.6rem;
+        /**Cada uno de estos maneja la distancia entre el contenido y el borde del contenedor. E incrementa en 8px en cada media query*/
     }
 }
+
 .image\.chef {
     display: none;
 }
 
-h3.chef-encabezado {
+.chef-encabezado {
     color: var(--Islamic-Green);
 }
 
-a.link-chef {
+.link-chef-mobile {
     color: var(--Islamic-Green);
+    text-decoration: none;
 }
+
+.link-chef{
+    display: none;
+}
+
+
 
 
 @media (width > 768px) {
@@ -268,12 +284,13 @@ a.link-chef {
     .menu-main {
         align-items: center;
         display: flex;
-        gap: .5rem; /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
+        gap: .5rem;
+        /**em ("Tipo de medida" Relacionado solo con el elemento padre) / rem ("Tipo de medida" Relacionado solo con el elemento root (raiz HTML)  */
         list-style: none;
         margin: 0;
         padding: 0;
     }
-    
+
     .hamburger-menu {
         display: none;
     }
@@ -289,14 +306,14 @@ a.link-chef {
     }
 
     .box-buttons {
-    display: flex;
-    gap: 1rem;
+        display: flex;
+        gap: 1rem;
     }
 
-    .box-buttons .btn--light-green { 
+    .box-buttons .btn--light-green {
         margin: unset;
     }
-    
+
 
     .btn-non-block.btn-explore {
         display: flex;
@@ -309,17 +326,35 @@ a.link-chef {
         max-width: 100vw;
         padding: 0;
     }
-    
+/* Today Offers */
+
+
+
+
+
+
+
     /* Información de Chef */
 
     .chefs-content {
         display: flex;
-}
+    }
 
-.image\.chef {
-    display: flex;
-}
+    .image\.chef {
+        display: flex;
+    }
 
+    .link-chef-mobile {
+        color: var(--Islamic-Green);
+        text-decoration: none;
+        display: none;
+    }
+
+    .link-chef{
+        display: contents;
+        color: var(--Islamic-Green);
+        text-decoration: none;
+    }
 
 
 
@@ -336,7 +371,8 @@ a.link-chef {
     .widget-right {
         /* flex-basis: auto; */
         /* flex-grow: 1; */
-        flex: 1 0 auto;   /**Esta es la manera abrebiada de hecer el flex en una linea de código  "<grow> <shrink> <auto basis>" */
+        flex: 1 0 auto;
+        /**Esta es la manera abrebiada de hecer el flex en una linea de código  "<grow> <shrink> <auto basis>" */
     }
 }
 
