--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,39 @@ h2 span {
     width: 100%;
 }
 
+/* Main Special Offers*/
+
+.menu-offers {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+h2 {
+    text-align: center;
+}
+
+p.subtitulo {
+    color: var var(--Slate-Grey) (--Slate-Grey);
+    text-align: center;
+}
+.offert-1 {
+    background-color: var(--Lotion);
+}
+.offert-2 {
+    background-color: var(--Lotion);
+}
+.offert-3 {
+    background-color: var(--Lotion);
+}
+img.estrellas {
+    float: left;
+}
+
+
+
+
 /* Main chef */
 .chef-1 {
     flex-basis: 50%;
@@ -254,6 +287,31 @@ details[open] summary {
     }
 }
 
+/* Special Offers */
+
+.offert-3{
+    display: none;
+}
+.content-sushi {
+    display: none;
+} 
+.content-image-1 {
+    display: flex;
+    justify-content: center;
+}
+
+.content-image-2 {
+    display: flex;
+    justify-content: center;
+}
+.content-image-3 {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+/* Chef michelin */
 .image\.chef {
     display: none;
 }
@@ -267,7 +325,7 @@ details[open] summary {
     text-decoration: none;
 }
 
-.link-chef{
+.link-chef {
     display: none;
 }
 
@@ -326,7 +384,15 @@ details[open] summary {
         max-width: 100vw;
         padding: 0;
     }
-/* Today Offers */
+
+    /* Today Offers */
+
+.content-sushi {
+    display: flex;
+} 
+.offert-3{
+    display: flex;
+}
 
 
 
@@ -350,13 +416,11 @@ details[open] summary {
         display: none;
     }
 
-    .link-chef{
+    .link-chef {
         display: contents;
         color: var(--Islamic-Green);
         text-decoration: none;
     }
-
-
 
 
     .footer-container {
